--- a/style.css
+++ b/style.css
@@ -32,9 +32,8 @@ header {
     background-color: #fafafa;
     border: 1px solid #000;
     border-radius: 15px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, .25);
     margin: 20px auto;
-    padding: 40px 50px;
+    padding: 20px 20px;
     width: 50%;
     text-align: center;
 }
@@ -54,7 +53,7 @@ header {
     outline: 0;
     font-weight: bold;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .btn:hover {
@@ -69,8 +68,88 @@ header {
 }
 
 #start-btn {
-    width: 250px;
-    margin-top: 25px;
+    width: 350px;
+    margin-top: 20px;
     padding: 10px auto;
+}
+
+/* quesions/ feedback card */
+
+.answer-grid {
+    display: grid;
+    width: 100%;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.feedback {
+    margin-bottom: 20px;
+    border-bottom: 5px solid;
+    font-size: 40px;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.question-header {
+    width: 50%;
+    margin-bottom: 20px;
+}
+
+.correct {
+    background-color: #fafafa;
+}
+
+.correct .feedback {
+    color: #0cac21;
+}
+
+.incorrect {
+    background-color: #fafafa;
+}
+
+.incorrect .feedback {
+    color: #a00000;
+}
+
+.hide {
+    display: none;
+}
+
+.end {
+    text-align: center;
+}
+
+.name-input {
+    width: 400px;
+    display: block;
+    margin: 20px auto 20px auto;
+    padding: 7px;
+    border: 10px solid black;
+    border-radius: 5px;
+    outline: none;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 16px;
+}
+
+#name-btn {
+    width: 400px;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+footer {
+    background-color: #fafafa;
+    border: 1px solid #000;
+    border-radius: 15px;
+    padding: 20px;
+    margin: 20px auto 20px auto; 
+    text-align: center;
+    width: 50%;
+}
+
+.scores-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
