--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Helvetica, Arial, sans-serif;
     line-height: 1.4;
     background-color: #fafafa;
     color: #000;
@@ -46,13 +46,14 @@ header {
 .btn {
     width: 100%;
     padding: 20px 50px;
-    border: 0;
+    border: 15%;
+    margin-bottom: 5%;
     border-radius: 15px;
     background-color: #2e0053;
     color: #fafafa;
     outline: 0;
     font-weight: bold;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Helvetica, Arial, sans-serif;
     font-size: 18px;
 }
 
@@ -80,12 +81,13 @@ header {
     width: 100%;
     justify-content: space-between;
     margin-top: 20px;
+
 }
 
 .feedback {
     margin-bottom: 20px;
     border-bottom: 5px solid;
-    font-size: 40px;
+    font-size: 20px;
     font-style: italic;
     font-weight: bold;
 }
@@ -127,7 +129,7 @@ header {
     border: 10px solid black;
     border-radius: 5px;
     outline: none;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Helvetica, Arial, sans-serif;
     font-size: 16px;
 }
 
